[tool.poetry]
name = "setlist-to-pdf"
version = "0.1.0"
description = ""
authors = ["FingalP <fingalplumpton@gmail.com>"]
readme = "README.md"
packages = [{include = "setlist_to_pdf"}]

[tool.poetry.dependencies]
python = "^3.11" 
pypdf2 = "^2.11.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
